--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@ markdown: 			 redcarpet
 #relative_permalinks: true
 
 # Setup
-title:               R-338 (Renk) Takım Proje Sayfası
+title:               R-338 Takım Prometheus Proje Sayfası
 tagline:             'Akademik Bilişim 2016'
 description:         'Kısa proje tanımını buraya girin'
 url:                 http://r338.github.io/ab-2016
-baseurl:             '/takim-taslak'
+baseurl:             '/prometheus-ab16'
 paginate:            5
 
 # About/contact
